Fixed the footer overlapping the forms

--- a/src/components/Signup.module.css
+++ b/src/components/Signup.module.css
@@ -4,21 +4,23 @@
     font-family: 'Montserrat', sans-serif;
 } */
 body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     background-color: #f9f9f9;
 }
-
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 form{
     display: flex;
     flex-direction: column;
     row-gap: .3rem;
     justify-content: center;
-    padding: 3vw 4vw;
-    height: auto;
-    left: 50%;
-    top: 47%;
-    position  : absolute;
-    transform : translate(-50%, -50%);
-min-height: 100vh;
+    height: 969px !important;
+    padding-bottom: 200px;
     font-family: 'Montserrat', sans-serif;
     z-index: -1;
 }
