--- a/src/components/shared/Navigation.module.css
+++ b/src/components/shared/Navigation.module.css
@@ -62,37 +62,6 @@ h1{
     position: relative; 
    }
 
-   .buttonBlue{
-    /* height: 3.12rem; */
-    border-radius: 10px; 
-    background-color: #353A5D;
-    border: none;
-    color: white !important;
-    text-align: center;
-    text-decoration: none; 
-    display: inline-block;
-    filter: drop-shadow(0 2px 4px #00000029);
-    font-weight: 700;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.buttonBlue a{
-    color: white;
-}
-.buttonWhite{
-    /* height: 3.12rem;
-    width: 7.75rem; */
-    border-radius: 10px; 
-    background-color: white;
-    border: 1px solid #DDDDDD;
-    color: white;
-    text-align: center;
-    text-decoration: none; 
-    display: inline-block;
-    filter: drop-shadow(0 2px 4px #00000014);
-    font-weight: 700;
-    font-family: 'Montserrat', sans-serif;
-}
 
    input[type=checkbox]{
     display: none;
@@ -108,7 +77,7 @@ h1{
    .menu { 
     display:none;
     position: absolute;
-    background-color: white;
+    background-color:  #f9f9f9;
     right: 0;
     left: 0;
     text-align: center;
@@ -117,7 +86,7 @@ h1{
    }
    .menu li:hover {
     display: inline-block;
-    background-color: white;
+    border-bottom: 3px solid #353A5D;
     transition: 0.3s ease;
    }
    .menu li + li {
